--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,6 +25,11 @@
   clip: rect(0 0 0 0);
 }
 
+html {
+  height: 100%;
+  background-color: #f2f2f2;
+}
+
 body {
   margin: 0;
   font-family: "PT Sans", Arial, sans-serif;
@@ -48,23 +53,50 @@ body {
   border: none;
 }
 
-.page-header {
-  background-color: #ffffff;
+.page-container {
+  width: 1200px;
+  margin: 0 auto;
+  background: #ffffff;
+  box-shadow: 0px 0px 15px #00000033;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
 }
 
-.logo-link {}
+.main-container {
+  flex-grow: 1;
+}
+
+.page-header {
+  display: flex;
+}
+
+.navigation {
+  display: flex;
+  width: 1060px;
+  margin-right: 30px;
+  padding-left: 70px;
+}
+
+.logo-link {
+  display: block;
+}
 
 .logo-image {}
-
-.navigation {}
 
 .navigation-list {
   margin: 0;
   padding: 0;
   list-style: none;
+  display: flex;
+  justify-content: space-between;
+  width: 339px;
 }
 
-.navigation-item {}
+.navigation-item {
+  /* padding: 20px 16px; */
+  align-self: center;
+}
 
 .navigation-link {
   color: #000000;
@@ -75,11 +107,25 @@ body {
   text-transform: capitalize;
 }
 
-.user-menu-button {}
+.user-menu-button {
+  padding: 8px 50px;
+  width: 160px;
+  border-radius: 4px;
+}
 
-.user-menu {}
+.user-menu {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  margin-left: auto;
+  justify-content: space-between;
+  width: 226px;
+}
 
-.user-menu-item {}
+.user-menu-item {
+  align-self: center;
+}
 
 .user-menu-link {
   text-decoration: none;
@@ -109,19 +155,26 @@ body {
   background-size: 100% auto, cover;
   background-position: left bottom, left top;
   background-color: #b89679;
+  min-height: 485px;
 }
 
-.welcome-image {}
+.welcome-image {
+  display: block;
+  margin: 0 auto;
+  padding-top: 51px;
+  padding-bottom: 82px;
+}
 
 .advantages {}
 
 .advantages-title {
-  margin: 0;
+  margin: 70px auto 25px;
   font-weight: 700;
   font-size: 30px;
   line-height: 36px;
   text-transform: uppercase;
   text-align: center;
+  width: 650px;
 }
 
 .advantages-subtitle {
@@ -130,49 +183,75 @@ body {
   line-height: 26px;
   color: #333333;
   text-align: center;
+  margin: 25px auto 90px;
+  width: 700px;
 }
 
 .advantages-list {
   margin: 0;
   padding: 0;
   list-style: none;
+  display: flex;
+  flex-wrap: wrap;
 }
 
-.advantages-item {}
+.advantages-item {
+  width: 400px;
+  box-sizing: border-box;
+}
 
 .advantages-item-dark {
   background-color: #82b3d3;
   color: #ffffff;
+  flex-grow: 1;
+  width: 1200px;
+  display: flex;
+}
+
+.advantages-container {
+  display: flex;
+  flex-direction: column;
+  width: 400px;
+  padding: 103px 85px;
+  box-sizing: border-box;
 }
 
 .advantages-item-medium {
   background-color: #83b3d333;
+  padding: 103px 85px;
 }
 
 .advantages-item-light {
   background-color: #83b3d31f;
+  padding: 103px 85px;
 }
 
 .advantages-header {
-  margin: 0;
+  margin: 0 auto 62px;
   font-weight: 700;
   font-size: 24px;
   line-height: 28px;
   text-transform: uppercase;
   text-align: center;
+  width: 175px;
 }
 
 .advantages-description {
   margin: 0;
   text-align: center;
+  width: 250px;
 }
 
 .advantages-image {}
 
-.services {}
+.services {
+  display: flex;
+  flex-direction: column;
+}
 
 .services-title {
-  margin: 0;
+  margin: 65px auto 20px;
+  width: 515px;
   font-size: 30px;
   font-weight: 700;
   line-height: 36px;
@@ -181,7 +260,7 @@ body {
 }
 
 .services-subtitle {
-  margin: 0;
+  margin: 0 auto 65px;
   color: #333333;
   font-size: 22px;
   line-height: 26px;
@@ -193,16 +272,21 @@ body {
   padding: 0;
   list-style: none;
   text-align: center;
+  display: flex;
 }
 
-.services-item {}
+.services-item {
+  padding: 80px 85px;
+  width: 400px;
+  box-sizing: border-box;
+}
 
 .services-item:nth-child(odd) {
   background-color: #83b3d31f;
 }
 
 .services-caption {
-  margin: 0;
+  margin: 0 auto 30px;
   font-size: 24px;
   font-weight: 700;
   line-height: 28px;
@@ -219,26 +303,40 @@ body {
 }
 
 .search-title {
-  margin: 0;
   font-size: 30px;
   font-weight: 700;
   line-height: 36px;
   text-transform: uppercase;
+  margin: 96px auto 20px;
 }
 
 .search-desription {
-  margin: 0;
+  margin: 0 auto 55px;
   color: #333333;
   font-size: 22px;
   line-height: 26px;
+  width: 592px;
 }
 
 .search-button {
+  display: block;
+  width: 376px;
   font-size: 20px;
   line-height: 36px;
+  margin: 0 auto 96px;
+  padding: 8px 50px;
+  border-radius: 4px;
 }
 
 .page-footer {}
+
+.contacts-container {
+  width: 1060px;
+  display: flex;
+  justify-content: space-between;
+  margin: 0 auto;
+  padding: 40px 70px 30px;
+}
 
 .subscribe {
   background-image: url(../images/subscribe-background.jpg);
@@ -246,10 +344,11 @@ body {
   background-color: #b89679;
   background-repeat: no-repeat;
   background-size: cover;
+  padding: 96px 258px 104px 258px;
 }
 
 .subscribe-title {
-  margin: 0;
+  margin: 0 auto 20px;
   text-align: center;
   font-weight: 700;
   font-size: 30px;
@@ -258,27 +357,36 @@ body {
 }
 
 .subscribe-subtitle {
-  margin: 0;
+  margin: 0 auto 54px;
   text-align: center;
+  width: 475px;
 }
 
-.subscribe-form {}
-
-.subscribe-form-name {
-  margin: 0;
+.subscribe-form {
+  display: flex;
+  width: 684px;
+  margin: 0 auto;
 }
+
 
 .subscribe-input {
+  width: 452px;
   font-size: 18px;
   font-weight: 400;
   line-height: 24px;
   text-align: left;
+  padding: 12px 20px;
+  border-radius: 4px 0px 0px 4px;
+  border: none;
 }
 
 .subscribe-button {
   background-color: #82b3d3;
   font-size: 20px;
   line-height: 36px;
+  width: 252px;
+  padding: 8px 50px;
+  border-radius: 0px 4px 4px 0px;
 }
 
 .socials {}
@@ -287,11 +395,17 @@ body {
   margin: 0;
   padding: 0;
   list-style: none;
+  width: 142px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .social-item {}
 
-.social-link {}
+.social-link {
+  text-decoration: none;
+  color: #000000;
+}
 
 .contacts {}
 
