--- a/styles/styles.css
+++ b/styles/styles.css
@@ -104,6 +104,17 @@ body {
   font-size: 20px;
   line-height: 24px;
   padding: 20px 16px;
+  position: relative;
+}
+
+.navigation-link-current::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  right: 16px;
+  left: 16px;
+  height: 2px;
+  background-color: #756257;
 }
 
 .user-menu-button {
@@ -116,6 +127,24 @@ body {
   font-size: 16px;
   line-height: 20px;
   margin-left: 20px;
+}
+
+.user-menu-button:hover {
+  background-color: #615048;
+}
+
+.user-menu-button:focus {
+ background-color: #615048;
+}
+
+.user-menu-button:active {
+  background-color: #756157;
+  color: #ffffff4d;
+}
+
+.user-menu-button:disabled {
+  background-color: #e5e5e5;
+  color: #ffffff;
 }
 
 .user-menu {
@@ -138,23 +167,34 @@ body {
   display: block;
   box-sizing: border-box;
   color: inherit;
+  position: relative;
 }
 
 .user-menu-search {}
 
-/* .user-menu-favorite {
-  width: 20px;
-  height: 20px;
-  background: #7db54f;
-  border-radius: 50%;
+.user-menu-icon {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  margin: auto;
+  fill: #000000;
 }
 
 .notification-badge {
+  padding: 5px;
   font-size: 10px;
+  font-weight: 400;
   line-height: 10px;
   text-align: center;
   color: #ffffff;
-} */
+  background-color: #7db54f;
+  border-radius: 50%;
+  position: absolute;
+  left: 20px;
+  top: 11px;
+}
 
 .main-index {}
 
@@ -180,7 +220,7 @@ body {
 }
 
 .advantages-title {
-  margin: 70px auto 25px;
+  margin: 0 auto 25px;
   font-weight: 700;
   font-size: 30px;
   line-height: 36px;
@@ -247,18 +287,51 @@ body {
   text-transform: uppercase;
   text-align: center;
   width: 175px;
+  /* position: relative; */
 }
+/*
+.advantages-header::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  right: 57px;
+  left: 57px;
+  height: 2px;
+  background-color: #756257;
+} */
 
 .advantages-description {
   margin: 0 auto;
   text-align: center;
   width: 230px;
+  position: relative;
 }
 
 .advantages-image {
   object-fit: cover;
   height: 100%;
 }
+
+.advantages-description::before {
+  content:  "";
+  position: absolute;
+  right: 85px;
+  left: 85px;
+  height: 2px;
+  background-color: #0000004d;
+  top: -33px;
+}
+
+.advantages-item-dark .advantages-description::before {
+  content:  "";
+  position: absolute;
+  right: 85px;
+  left: 85px;
+  height: 2px;
+  background-color: #ffffff4d;
+  top: -33px;
+}
+
 
 .services {}
 
@@ -270,11 +343,11 @@ body {
   line-height: 36px;
   text-transform: uppercase;
   text-align: center;
-  padding-top: 60px;
+  padding-top: 64px;
 }
 
 .services-subtitle {
-  margin: 0 auto 65px;
+  margin: 0 auto 64px;
   color: #333333;
   font-size: 22px;
   line-height: 26px;
@@ -291,7 +364,7 @@ body {
 }
 
 .services-item {
-  padding: 80px 85px;
+  padding: 81px 85px 80px;
   width: 400px;
   box-sizing: border-box;
 }
@@ -306,6 +379,30 @@ body {
   font-weight: 700;
   line-height: 28px;
   text-transform: uppercase;
+}
+
+.services-caption::before {
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 30px;
+  width: 75px;
+  height: 72px;
+  content: "";
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+}
+
+.services-house::before {
+  background-image: url("../images/services-house.svg");
+}
+
+.services-food::before {
+  background-image: url("../images/services-food.svg");
+}
+
+.services-souvenirs::before {
+  background-image: url("../images/services-souvenirs.svg");
 }
 
 .services-text {
@@ -327,7 +424,7 @@ body {
 }
 
 .search-desription {
-  margin: 0 auto 55px;
+  margin: 0 auto 54px;
   color: #333333;
   font-size: 22px;
   line-height: 26px;
@@ -339,9 +436,30 @@ body {
   width: 376px;
   font-size: 20px;
   line-height: 36px;
-  margin: 0 auto 96px;
-  padding: 8px 50px;
+  margin: 0 auto 97px;
+  padding: 8px 10px;
+  box-sizing: border-box;
   border-radius: 4px;
+}
+
+.search-button:hover {
+  background-color: #615048;
+}
+
+.search-button:focus {
+ background-color: #615048;
+}
+
+.search-button:active {
+  background-color: #756157;
+  color: #ffffff4d;
+}
+
+.search-button:disabled,
+.search-button:disabled:hover,
+.search-button:disabled:active {
+  background-color: #e5e5e5;
+  color: #ffffff;
 }
 
 .page-footer {}
@@ -351,7 +469,7 @@ body {
   display: flex;
   justify-content: space-between;
   margin: 0 auto;
-  padding: 40px 70px 30px;
+  padding: 44px 70px 30px;
 }
 
 .subscribe {
@@ -383,9 +501,11 @@ body {
 }
 
 .subscribe-subtitle {
-  margin: 0 auto 54px;
+  margin: 0 auto 55px;
   text-align: center;
   width: 475px;
+  font-size: 22px;
+  line-height: 26px;
 }
 
 .subscribe-subtitle-inner {
@@ -393,7 +513,8 @@ body {
 }
 
 .subscribe-form {
-  display: flex;
+  display: grid;
+  grid-template-columns: 452px 232px;
   width: 684px;
   margin: 0 auto;
 }
@@ -401,7 +522,6 @@ body {
 
 .subscribe-input {
   background-color: #f2f2f2;
-  width: 452px;
   font-size: 18px;
   font-weight: 400;
   line-height: 24px;
@@ -411,15 +531,45 @@ body {
   border: none;
 }
 
+.subscribe-input:hover {
+  background-color: #e6e6e6;
+}
+
+.subscribe-input:focus {
+  background-color: #e6e6e6;
+  outline: 3px solid #83b3d3;
+  outline-offset: -3px;
+}
+
 .subscribe-button {
   background-color: #82b3d3;
   font-size: 20px;
   line-height: 36px;
-  width: 252px;
-  padding: 8px 50px;
+  padding: 8px 10px;
   border-radius: 0 4px 4px 0;
   cursor: pointer;
 }
+
+.subscribe-button:hover {
+  background-color: #68a2ca;
+}
+
+.subscribe-button:focus {
+ background-color: #68a2ca;
+}
+
+.subscribe-button:active {
+  background-color: #82b3d3;
+  color: #ffffff4d;
+}
+
+.subscribe-button:disabled,
+.subscribe-button:disabled:hover,
+.subscribe-button:disabled:active {
+  background-color: #e5e5e5;
+  color: #ffffff;
+}
+
 
 .socials {}
 
@@ -440,6 +590,32 @@ body {
 .social-link {
   text-decoration: none;
   color: #000000;
+  display: block;
+  position: relative;
+  min-width: 47px;
+  min-height: 40px;
+}
+
+.social-icon {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  fill: #83b3d3;
+}
+
+.social-link:hover .social-icon {
+  fill: #68a2ca;
+}
+
+.social-link:focus .social-icon {
+  fill: #68a2ca;
+}
+
+.social-link:active .social-icon {
+  fill: #68a2ca4d;
 }
 
 .contacts {}
@@ -452,28 +628,55 @@ body {
   line-height: 40px;
   text-align: center;
   display: block;
-
 }
 
+.contacts-link:hover {
+  color: #756157;
+}
+
+.contacts-link:focus {
+  color: #756157;
+}
+
+.contacts-link:active {
+  color: #7561574d;
+}
 .copyright {}
 
 .copyright-link {
+  color: #000000;
   text-decoration: none;
+  display: block;
+  padding: 5px 0;
 }
 
-.htmlacademy-logo {}
+.htmlacademy-logo {
+  fill: #000000;
+}
+
+.copyright-link:hover .htmlacademy-logo {
+  fill: #756157;
+}
+
+.copyright-link:focus .htmlacademy-logo {
+  fill: #756157;
+}
+
+.copyright-link:active .htmlacademy-logo {
+  fill: #7561574d;
+}
 
 
 /* стили страницы каталога */
 
 .hero-inner-container {
   background-color: #b89679;
-  background-image: url(../images/hero-inner-background.jpg);
+  background-image: url("../images/hero-inner-background.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   min-height: 307px;
   color: #ffffff;
-  padding: 35px 70px 70px;
+  padding: 35px 70px 69px;
 }
 
 .header-inner {
@@ -496,18 +699,46 @@ body {
   gap: 28px;
 }
 
-/* .breadcrums-item {
-  margin-right: 28px;
+.breadcrumbs-item {
+  position: relative;
 }
 
-.breadcrums-item:last-child {
-  margin-right: 0;
-} */
+.breadcrumbs-item::after {
+  content: "";
+  display: block;
+  position: absolute;
+  left: 20px;
+  top: 7px;
+  border-top: 1px solid #ffffff;
+  border-right: 1px solid #ffffff;
+  width: 6px;
+  height: 6px;
+  transform: rotate(45deg);
+}
+
+.breadcrumbs-item:last-child::after{
+  content: none;
+}
 
 .breadcrumbs-link {
   text-decoration: none;
   color: inherit;
   font-size: 16px;
+}
+
+.breadcrumbs-link:hover {
+  color: #ffffff99;
+}
+
+.breadcrumbs-link:focus {
+  color: #ffffff;
+}
+
+.breadcrumbs-link:active {
+  color: #ffffff4d;
+}
+
+.breadcrumbs-icon {
 }
 
 .hotel-filter-form {
@@ -549,6 +780,7 @@ body {
 }
 
 .filter-button[type=submit] {
+  display: inline-block;
   padding: 8px 50px;
   width: 191px;
   background-color: #82b3d3;
@@ -566,7 +798,28 @@ body {
   cursor: pointer;
 }
 
+.filter-button[type=submit]:hover {
+  background-color: #68a2ca;
+}
+
+.filter-button[type=submit]:focus {
+ background-color: #68a2ca;
+}
+
+.filter-button[type=submit]:active {
+  background-color: #82b3d3;
+  color: #ffffff4d;
+}
+
+.filter-button[type=submit]:disabled,
+.filter-button[type=submit]:disabled:hover,
+.filter-button[type=submit]:disabled:active {
+  background-color: #e5e5e5;
+  color: #ffffff;
+}
+
 .filter-button[type=reset] {
+  display: inline-block;
   padding: 8px 50px;
   width: 191px;
   background: none;
@@ -580,8 +833,28 @@ body {
   border: none;
   color: #ffffff;
   cursor: pointer;
+  border-radius: 4px;
 }
 
+.filter-button[type=reset]:hover {
+  opacity: 0.6;
+}
+
+.filter-button[type=reset]:focus {
+  outline:3px solid #83b3d3;
+  outline-offset: -3px;
+}
+
+.filter-button[type=reset]:active {
+  color: #ffffff4d;
+}
+
+.filter-button[type=reset]:disabled,
+.filter-button[type=reset]:disabled:hover,
+.filter-button[type=reset]:disabled:active {
+  background-color: #e5e5e5;
+  color: #ffffff;
+}
 .catalog {
   padding: 50px 70px 60px 70px;
 }
@@ -589,7 +862,7 @@ body {
 .sorting-container {
   display: flex;
   width: 1060px;
-  margin-bottom: 40px;
+  margin-bottom: 39px;
 }
 
 .catalog-title {
@@ -604,13 +877,35 @@ body {
 .select-control {
   margin-right: 70px;
   width: 292px;
-  padding: 14px 20px;
+  padding: 0 54px 0 18px;
   border: 2px solid #e5e5e5;
   border-radius: 4px;
   font-size: 18px;
   line-height: 21px;
   color: #333333;
   margin-left: auto;
+  font-family: "PT Sans", Arial, sans-serif;
+  height: 49px;
+  appearance: none;
+  background-image: url("../images/arrow-down.svg");
+  background-repeat: no-repeat;
+  background-size: 12px 7px;
+  background-position: center right 18px;
+}
+
+.select-control:hover {
+  border-color: #68a2ca;
+}
+
+.select-control:focus {
+  outline: none;
+  border-color: #68a2ca;
+}
+
+.select-control:disabled,
+.select-control:disabled:hover {
+  color: #0000004d;
+  border-color: #0000004d;
 }
 
 .view-list {
@@ -634,12 +929,38 @@ body {
   border: 2px solid #e5e5e5;
   border-radius: 4px;
   box-sizing: border-box;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .view-link-selected {
   border-color: #000000;
 }
 
+.view-link:hover {
+  border-color: #000000;
+}
+
+.view-link:focus {
+  outline: none;
+  border-color: #68a2ca;
+}
+
+.view-link:active {
+  border-color: #000000;
+}
+
+.view-table {
+  background-image: url("../images/view-images/view-table.svg");
+}
+
+.view-big-icons {
+  background-image: url("../images/view-images/view-big-icons.svg");
+}
+
+.view-list-icons {
+  background-image: url("../images/view-images/view-list.svg");
+}
 
 .hotel-list-table {
   display: grid;
@@ -673,6 +994,7 @@ body {
 .card-image {
   width: 100%;
   height: auto;
+  display: block;
 }
 
 .card-title {
@@ -698,6 +1020,26 @@ body {
   border-radius: 4px;
 }
 
+.card-button:hover {
+  background-color: #615048;
+}
+
+.card-button:focus {
+ background-color: #615048;
+}
+
+.card-button:active {
+  background-color: #756157;
+  color: #ffffff4d;
+}
+
+.card-button:disabled,
+.card-button:disabled:hover,
+.card-button:disabled:active {
+  background-color: #e5e5e5;
+  color: #ffffff;
+}
+
 .favorite-button-selected {
   background-color: #7DB54F;
   padding: 8px 10px;
@@ -705,15 +1047,83 @@ body {
   cursor: pointer;
 }
 
+.favorite-button-selected:hover {
+  background-color: #6c9e42;
+}
+
+.favorite-button-selected:focus {
+ background-color: #6c9e42;
+}
+
+.favorite-button-selected:active {
+  background-color: #7db54f;
+  color: #ffffff4d;
+}
+
+.favorite-button-selected:disabled,
+.favorite-button-selected:disabled:hover,
+.favorite-button-selected:disabled:active {
+  background-color: #e5e5e5;
+  color: #ffffff;
+}
+
 .favorite-button {
-  background-color:  #82b3d3;
+  background-color: #82b3d3;
   border-radius: 4px;
   padding: 8px 10px;
   cursor: pointer;
 }
 
+.favorite-button:hover {
+  background-color: #68a2ca;
+}
+
+.favorite-button:focus {
+ background-color: #68a2ca;
+}
+
+.favorite-button:active {
+  background-color: #82b3d3;
+  color: #ffffff4d;
+}
+
+.favorite-button:disabled,
+.favorite-button:disabled:hover,
+.favorite-button:disabled:active {
+  background-color: #e5e5e5;
+  color: #ffffff;
+}
+
 .hotel-rating {
   margin: 0;
+}
+
+.hotel-rating {
+  margin: 0;
+  padding: 0;
+  background-image: url("../images/rating-star.svg");
+  background-repeat: space no-repeat;
+  background-position: center;
+}
+
+.one-star {
+  width: 18px;
+}
+
+.two-stars {
+  width: 42px;
+}
+
+.three-stars {
+  width: 66px;
+}
+
+.four-stars {
+  width: 88px;
+}
+
+.five-stars {
+  width: 106px;
 }
 
 .rating-number {
@@ -768,4 +1178,20 @@ body {
   font-size: 22px;
   font-weight: 400;
   line-height: 26px;
+  color: #000000;
+}
+
+.pagination-link:not(.pagination-link-current):hover {
+  background-color: #68a2ca;
+  outline: 1px solid #82b3d3;
+}
+
+.pagination-link:not(.pagination-link-current):focus {
+  background-color: #68a2ca;
+  outline: 1px solid #82b3d3;
+}
+
+.pagination-link:not(.pagination-link-current):active {
+  color: #ffffff4d;
+  background-color: #82b3d3;
 }
