--- a/styles/styles.css
+++ b/styles/styles.css
@@ -144,8 +144,8 @@ body {
 }
 
 .user-menu-button:focus {
- background-color: #615048;
- outline: none;
+  background-color: #615048;
+  outline: none;
 }
 
 .user-menu-button:active {
@@ -324,7 +324,7 @@ body {
 }
 
 .advantages-description::before {
-  content:  "";
+  content: "";
   position: absolute;
   right: 85px;
   left: 85px;
@@ -334,7 +334,7 @@ body {
 }
 
 .advantages-item-dark .advantages-description::before {
-  content:  "";
+  content: "";
   position: absolute;
   right: 85px;
   left: 85px;
@@ -455,8 +455,8 @@ body {
 }
 
 .search-button:focus {
- background-color: #615048;
- outline: none;
+  background-color: #615048;
+  outline: none;
 }
 
 .search-button:active {
@@ -529,6 +529,7 @@ body {
 
 .subscribe-input {
   background-color: #f2f2f2;
+  font-family: inherit;
   font-size: 18px;
   font-weight: 400;
   line-height: 24px;
@@ -562,8 +563,8 @@ body {
 }
 
 .subscribe-button:focus {
- background-color: #68a2ca;
- outline: none;
+  background-color: #68a2ca;
+  outline: none;
 }
 
 .subscribe-button:active {
@@ -686,7 +687,7 @@ body {
   background-size: cover;
   min-height: 307px;
   color: #ffffff;
-  padding: 35px 70px 69px;
+  padding: 35px 70px 70px;
 }
 
 .header-inner {
@@ -726,7 +727,7 @@ body {
   transform: rotate(45deg);
 }
 
-.breadcrumbs-item:last-child::after{
+.breadcrumbs-item:last-child::after {
   content: none;
 }
 
@@ -749,8 +750,7 @@ body {
   color: #ffffff4d;
 }
 
-.breadcrumbs-icon {
-}
+.breadcrumbs-icon {}
 
 .hotel-filter-form {
   display: flex;
@@ -760,13 +760,22 @@ body {
   border: none;
   margin: 0;
   padding: 0;
+  margin-right: 70px;
+}
+
+.hotel-filter-group:not(.filter-price) {
+  width: 150px;
+}
+
+.price-filter {
+  margin-left: 71px;
 }
 
 .hotel-filter-title {
   font-size: 20px;
   font-weight: 700;
   line-height: 24px;
-  margin-bottom: 32px;
+  margin-bottom: 31px;
 }
 
 .hotel-filter-list {
@@ -780,13 +789,158 @@ body {
 }
 
 .control {
-  font-size: 18px;
-  font-weight: 400;
+  font-family: inherit;
   line-height: 23px;
+  position: relative;
+  padding-left: 36px;
+  cursor: pointer;
+}
+
+.control-input[type="checkbox"] + .control-mark {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  background-color: #ffffff;
+  border-radius: 4px;
+  left: 0;
+  top: 1px;
+}
+
+.control-input[type="radio"] + .control-mark {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  background-color: #ffffff;
+  border-radius: 50%;
+  left: 0;
+  top: 1px;
+}
+
+.control-input[type="checkbox"]:checked + .control-mark {
+  background-image: url("../images/checkbox.svg");
+  background-repeat: no-repeat;
+  background-position: left 4px center;
+}
+
+.control-input[type="radio"]:checked + .control-mark::after {
+  content: "";
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  margin: auto;
+  width: 10px;
+  height: 10px;
+  background-color: #3f5e72;
+  border-radius: 50%;
+}
+
+.control:hover {
+  opacity: 0.6;
+}
+
+.control-input:focus + .control-mark {
+  outline: 3px solid #83b3d3;
+}
+
+.control:active {
+  opacity: 0.3;
+}
+
+.range-wrapper-inputs {
+  display: flex;
+  justify-content: flex-start;
+  gap: 2px;
+  margin-bottom: 44px;
+}
+
+.control-input-range {
+  width: 143px;
+  padding: 12px 20px;
+  box-sizing: border-box;
+  font-family: inherit;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 24px;
+  color: #000000;
+  background-color: #f2f2f2;
+  border: none;
+  appearance: textfield;
+}
+
+.control-input-range:first-of-type {
+  border-radius: 4px 0 0 4px;
+}
+
+.control-input-range:last-of-type {
+  border-radius: 0 4px 4px 0;
+}
+
+.control-input-range::-webkit-outer-spin-button,
+.control-input-range::-webkit-inner-spin-button {
+  appearance: none;
+  margin: 0;
+}
+
+.control-input-range:hover {
+  background-color: #e6e6e6;
+}
+
+.control-input-range:focus {
+  background-color: #e6e6e6;
+  outline: 3px solid #83b3d3;
+  outline-offset: -2px;
+}
+
+.range-scale {
+  position: relative;
+  height: 4px;
+  background-color: #ffffff4d;
+  width: 287px;
+}
+
+.range-bar {
+  position: absolute;
+  height: 4px;
+  background-color: #ffffff;
+  opacity: 1;
+}
+
+.range-toggle {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  background: #ffffff;
+  border-radius: 5px;
+  cursor: pointer;
+  border: none;
+}
+
+.range-toggle:hover {
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+}
+
+.range-toggle:active {
+  border: 2px solid #83b3d3;
+  box-shadow: 0px 7px 15px rgba(0, 0, 0, 0.4);
+}
+
+.range-toggle:focus {
+  border: 3px solid #83b3d3;
+  box-shadow: 0px 4px 10px #00000040;
+}
+
+.toggle-min {
+  top: -8px;
+  left: 0;
+}
+
+.toggle-max {
+  top: -8px;
+  right: 0;
 }
 
 .filter-button-container {
-  padding-top: 56px;
+  padding-top: 55px;
   width: 191px;
 }
 
@@ -814,8 +968,8 @@ body {
 }
 
 .filter-button[type=submit]:focus {
- background-color: #68a2ca;
- outline: none;
+  background-color: #68a2ca;
+  outline: none;
 }
 
 .filter-button[type=submit]:active {
@@ -853,7 +1007,7 @@ body {
 }
 
 .filter-button[type=reset]:focus {
-  outline:3px solid #83b3d3;
+  outline: 3px solid #83b3d3;
   outline-offset: -3px;
 }
 
@@ -867,6 +1021,7 @@ body {
   background-color: #e5e5e5;
   color: #ffffff;
 }
+
 .catalog {
   padding: 50px 70px 60px 70px;
 }
@@ -929,10 +1084,6 @@ body {
   max-width: 216px;
   gap: 8px;
 }
-
-/* .view-item:not(:last-child) {
-  margin-right: 8px;
-} */
 
 .view-link {
   display: block;
@@ -1037,8 +1188,8 @@ body {
 }
 
 .card-button:focus {
- background-color: #615048;
- outline: none;
+  background-color: #615048;
+  outline: none;
 }
 
 .card-button:active {
@@ -1065,8 +1216,8 @@ body {
 }
 
 .favorite-button-selected:focus {
- background-color: #6c9e42;
- outline: none;
+  background-color: #6c9e42;
+  outline: none;
 }
 
 .favorite-button-selected:active {
@@ -1093,8 +1244,8 @@ body {
 }
 
 .favorite-button:focus {
- background-color: #68a2ca;
- outline: none;
+  background-color: #68a2ca;
+  outline: none;
 }
 
 .favorite-button:active {
@@ -1198,12 +1349,14 @@ body {
 
 .pagination-link:not(.pagination-link-current):hover {
   background-color: #68a2ca;
-  outline: 1px solid #82b3d3;
+  box-shadow: inset 0 0 0 1px #82b3d3;
+  ;
 }
 
 .pagination-link:not(.pagination-link-current):focus {
   background-color: #68a2ca;
-  outline: 1px solid #82b3d3;
+  box-shadow: inset 0 0 0 1px #82b3d3;
+  ;
 }
 
 .pagination-link:not(.pagination-link-current):active {
