--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1161,7 +1161,6 @@ body {
   box-sizing: border-box;
   padding: 20px;
   width: 340px;
-  /* outline: 1px solid #e6e6e6; */
   box-shadow: 0 0 0 1px #e6e6e6;
   border-radius: 4px;
   display: grid;
@@ -1385,3 +1384,200 @@ body {
   color: #ffffff4d;
   background-color: #82b3d3;
 }
+
+.modal-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background-color: #f2f2f2cc;
+  z-index: 2;
+}
+
+.modal {
+  position: relative;
+  margin: auto;
+  padding: 64px 70px;
+  background-color: #ffffff;
+  border-radius: 30px;
+  box-shadow: 0 25px 50px 0 #00000026;
+}
+
+.modal-search-hotel {
+  width: 577px;
+}
+
+.modal-close-button {
+  position: absolute;
+  padding: 0;
+  top: 64px;
+  right: 52px;
+  width: 52px;
+  height: 52px;
+  background-color: #f2f2f2;
+  border-radius: 50%;
+  border: none;
+  background-image: url("../images/modal-close.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  cursor: pointer;
+}
+
+.modal-close-button:hover {
+  background-color: #e6e6e6;
+}
+
+.modal-title {
+  margin: 0;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 36px;
+  text-transform: uppercase;
+  color: #000000;
+  margin-bottom: 64px;
+}
+
+.serch-hotel-form {
+  display: grid;
+  grid-template-columns: 137px 111px 1fr 111px;
+  row-gap: 48px;
+}
+
+.modal-label {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 24px;
+  text-align: left;
+}
+
+.modal-label-right {
+  padding-left: 88px;
+  position: relative;
+}
+
+.modal-label-right::after {
+  content: "";
+  position: absolute;
+  width: 26px;
+  height: 26px;
+  border-radius: 50%;
+  background-color: #83b3d3;
+  right: 46px;
+  background-image: url("../images/info-icon.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.modal-field {
+  grid-column: 2 / -1;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+}
+
+.search-form-input {
+  background-color: #f2f2f2;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 24px;
+  text-align: left;
+}
+
+.modal-message {
+  position: relative;
+}
+
+.modal-message-error::after {
+  content: "Мы не можем отправить вас в прошлое.";
+  position: absolute;
+  color: #ff5757;
+  top: 4px;
+  left: 20px;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 21px;
+}
+
+.modal-message-info::after {
+  content: "На эти даты есть свободные номера. Пока есть.";
+  position: absolute;
+  color: #333333;
+  top: 4px;
+  left: 20px;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 21px;
+}
+
+.modal-count-input {
+  background-color: #f2f2f2;
+  border: none;
+  padding: 14px 0 14px 0;
+  text-align: center;
+}
+
+.modal-count-button {
+  border: none;
+  background-color: #f2f2f2;
+}
+
+.grid-count-container {
+  display: grid;
+  grid-template-columns: 40px 31px 40px;
+}
+
+.modal-button {
+  grid-column: 1/-1;
+  background-color: #83B3D3;
+  padding: 18px 30px;
+  border: none;
+  border-radius: 10px;
+  color: #ffffff;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 24px;
+  text-align: center;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+.modal-button:hover {
+  background-color: #68a2ca;
+}
+
+.modal-button:focus {
+  background-color: #68a2ca;
+  outline: none;
+}
+
+.modal-button:active {
+  background-color: #82b3d3;
+  color: #ffffff4d;
+}
+
+.modal-button:disabled,
+.modal-button:disabled:hover,
+.modal-button:disabled:active {
+  background-color: #e5e5e5;
+  color: #ffffff;
+}
+
+.modal-count-input::-webkit-outer-spin-button,
+.modal-count-input::-webkit-inner-spin-button {
+  appearance: none;
+  margin: 0;
+}
+
+
+/* .search-form-field::-webkit-inner-spin-button,
+.search-form-field::-webkit-calendar-picker-indicator {
+    opacity: 0;
+    -webkit-appearance: none;
+} */
