--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1697,7 +1697,7 @@ body {
   border: 9px solid transparent;
   border-bottom: 9px solid #333333;
   position: absolute;
-  top: -18px;
+  bottom: 100%;
   left: 118px;
 }
 
